--- a/Example/FRCircleSlider/Base.lproj/Main.storyboard
+++ b/Example/FRCircleSlider/Base.lproj/Main.storyboard
@@ -23,19 +23,43 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4eY-Ab-AUw" customClass="FRCircleSlider" customModule="FRCircleSlider">
                                 <rect key="frame" x="77.5" y="223.5" width="220" height="220"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="220" id="bU3-NR-G83"/>
                                     <constraint firstAttribute="width" constant="220" id="cJb-Zx-sFE"/>
                                 </constraints>
+                                <connections>
+                                    <action selector="valueChanged:" destination="vXZ-lx-hvc" eventType="valueChanged" id="8Wq-po-pfs"/>
+                                </connections>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8O0-EA-7Aq">
+                                <rect key="frame" x="166" y="463.5" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kgL-Ye-OU0">
+                                <rect key="frame" x="166" y="504.5" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.60784316059999999" green="0.60784316059999999" blue="0.60784316059999999" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="4eY-Ab-AUw" firstAttribute="centerY" secondItem="kh9-bI-dsS" secondAttribute="centerY" id="6dC-sr-58f"/>
+                            <constraint firstItem="8O0-EA-7Aq" firstAttribute="top" secondItem="4eY-Ab-AUw" secondAttribute="bottom" constant="20" id="EMc-dW-QYK"/>
                             <constraint firstItem="4eY-Ab-AUw" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="Eup-Oy-sx8"/>
+                            <constraint firstItem="kgL-Ye-OU0" firstAttribute="top" secondItem="8O0-EA-7Aq" secondAttribute="bottom" constant="20" id="NOp-1k-BuK"/>
+                            <constraint firstItem="kgL-Ye-OU0" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="T8G-Kr-uB9"/>
+                            <constraint firstItem="8O0-EA-7Aq" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="rDS-Qx-mjx"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="circleSlider" destination="4eY-Ab-AUw" id="k5u-RQ-dT6"/>
+                        <outlet property="value1" destination="8O0-EA-7Aq" id="HHc-Sd-eJd"/>
+                        <outlet property="value2" destination="kgL-Ye-OU0" id="Z99-KL-8dc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
